data/derived/comb/progs/unify/prog3913.ml.out
Characters 13-24:
  let _ = eval (Sine(0.0));;
               ^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
